# PrivateNovelWriter

./: .env.example  .gitignore  CLAUDE.md  CODEBUDDY.md  Cargo.toml  Data.cs  README.md  package.json
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs  server.rs  skill.md
cli/tests/: e2e.rs
desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.svelte  app.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/1111/: project.db
desktop/src-tauri/123/: project.db
desktop/src-tauri/123321/: project.db
desktop/src-tauri/Hi/: project.db
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/lib/: AgentPanel.svelte  CharacterPanel.svelte  Dashboard.svelte  Editor.svelte  ProjectTree.svelte  SamplePanel.svelte  SettingPanel.svelte
docs/: agent-a-playbook.md  beta-checklist.md  beta-roadmap.md  design.md  prompt-architecture.md  tools.md
kernel/: Cargo.toml
kernel/src/: lib.rs
kernel/src/agent/: evaluate.rs  llm.rs  mod.rs  plan.rs  revise.rs  write_chapter.rs
kernel/src/command/: agent.rs  data.rs  mod.rs
kernel/src/db/: crud.rs  mod.rs  schema.rs
kernel/src/handler/: mod.rs
kernel/src/models/: character.rs  mod.rs  novel.rs  outline.rs  plugin.rs  sample.rs  text.rs
kernel/src/storage/: mod.rs
scripts/: install-server.sh  pnw-server.service
