[package]
name = "pnw"
version = "0.1.0"
edition = "2021"

[dependencies]
pnw-kernel = { path = "../kernel" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
dotenv = "0.15"
