[package]
name = "pnw-kernel"
version = "0.1.0-alpha"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "=0.4.38", features = ["serde"] }
thiserror = "1"
dotenv = "0.15"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
bytes = "1"

[lib]
name = "pnw_kernel"
