[package]
name = "pnw-desktop"
version = "0.1.0-alpha"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pnw-kernel = { path = "../../kernel" }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "=0.4.38"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json", "blocking"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
